<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    tools:context="leclerc.zapper.NewUserActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:id="@+id/frmHeader"
            android:transitionName="header"
            android:layout_width="fill_parent"
            android:background="@android:drawable/dark_header">

            <TextView
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                style="@style/HeaderText"/>

        </FrameLayout>

        <ScrollView
            android:scrollbars="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/SubHeaderText"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="@string/new_user_sub_header"
                        android:layout_gravity="left|center_vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFromUser"
                        android:text="@string/new_user_username"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />

                    <EditText
                        android:id="@+id/txtUsername"
                        android:layout_marginBottom="25dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFromUser"
                        android:text="@string/new_user_password"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_marginBottom="20dp"
                        android:inputType="textPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFromUser"
                        android:text="@string/new_user_confirm_password"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />

                    <EditText
                        android:id="@+id/txtConfirmPassword"
                        android:layout_marginBottom="20dp"
                        android:inputType="textPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFromUser"
                        android:text="@string/new_user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_marginBottom="20dp"
                        android:inputType="textEmailAddress"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFromUser"
                        android:text="@string/new_user_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />

                    <DatePicker
                        android:id="@+id/dpBirthday"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:datePickerMode="spinner"
                        android:calendarViewShown="false"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextFromUser"
                        android:text="@string/new_user_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent" />

                    <RadioGroup
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rbMale"
                                android:layout_marginStart="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/new_user_gender_male" />

                            <RadioButton
                                android:id="@+id/rbFemale"
                                android:layout_marginStart="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/new_user_gender_female" />

                    </RadioGroup>

                </LinearLayout>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="150dp">

                    <Button
                        android:id="@+id/btnConfirm"
                        android:text="@string/new_user_confirm"
                        android:layout_gravity="end|center_vertical"
                        android:layout_width="150dp"
                        android:layout_height="75dp" />

                </FrameLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
