<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#151515">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/card_edit_validate"
            android:layout_gravity="left"
            android:src="@drawable/ic_action_tick"
            android:background="#151515"
            android:tint="#ff00ff00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/interest_edit_title"
            android:layout_gravity="center"
            android:textSize="24dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/card_edit_cancel"
            android:layout_gravity="right"
            android:src="@drawable/ic_action_cancel"
            android:background="#151515"
            android:tint="#ffff0000" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interest_edit_hashtag_title"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_edit_editHashtag"
        android:layout_gravity="center_horizontal|top"
        android:maxLines="1"
        android:maxLength="15"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:hint="@string/interest_edit_hashtag_hint"
        android:inputType="text"
        android:textColorHint="#ff3a6d8a"
        android:textColor="#FF81D4FA"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interest_edit_image_title"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_edit_useDefault"
            android:checked="true"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:text="Use default image (if available)" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/card_edit_imgInterest"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:background="#FF000000"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/interest_edit_image_button_text"
            android:textColor="#FF000000"
            android:id="@+id/card_edit_openImage"
            android:enabled="false"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>